--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,14 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/springboot
 spring.datasource.username=postgres
 spring.datasource.password=pass
 
-spring.jpa.hibernate.ddl-autoc=create
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 spring.thymeleaf.cache=false
-?
+
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=true
 
