--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,20 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/springboot
-spring.datasource.username=postgres
-spring.datasource.password=pass
+#spring.datasource.url=jdbc:postgresql://localhost:5432/springboot
+#spring.datasource.username=postgres
+#spring.datasource.password=pass
 
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.hibernate.ddl-auto=validate
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.show_sql=true
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.datasource.url=jdbc:mysql://localhost:3306/draclo?useUnicode=true&serverTimezone=Asia/Seoul
+spring.datasource.username=draclo
+spring.datasource.password=1111
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.database=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
